# boycott-kanye/bk-backend/swagger.json
@@ -89,7 +89,24 @@
     "/api/signatures/display-list": {
       "get": {
         "operationId": "SignaturesController_getSignaturesWithDisplayNames",
-        "parameters": [],
+        "parameters": [
+          {
+            "name": "page",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          },
+          {
+            "name": "perPage",
+            "required": true,
+            "in": "query",
+            "schema": {
+              "type": "number"
+            }
+          }
+        ],
         "responses": {
           "200": {
             "description": "Returns signatures with display names (anonymous for private signatures)",
@@ -337,6 +354,11 @@
             "description": "Display name of the signer (full name if public, \"Anonymous\" if private)",
             "example": "John Doe"
           },
+          "email": {
+            "type": "string",
+            "description": "Email address (full if public, anonymized if private)",
+            "example": "john@example.com OR j...n@example.com"
+          },
           "created": {
             "type": "string",
             "description": "Date when the signature was created",
@@ -346,6 +368,7 @@
         "required": [
           "id",
           "displayName",
+          "email",
           "created"
         ]
       },
